--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -54,4 +54,4 @@ jobs:
         run: snyk config set api=$SNYK_TOKEN; snyk config set org=joshua.woods
         
       - name: Snyk ignore test
-        run: snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31"
+        run: snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
