--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -52,4 +52,4 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         
       - name: Snyk ignore test
-        run: snyk config set api=$SNYK_TOKEN; snyk config set org=joshua.woods; snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
+        run: echo "Henlo"; snyk config set api=$SNYK_TOKEN; snyk config set org=joshua.woods; snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
