--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -47,9 +47,12 @@ jobs:
         #  with:
         #    node-version: 20
 
-        env:
+        
           # This is where you will need to introduce the Snyk API token created with your Snyk account
+        env:   
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         
       - name: Snyk ignore test
-        run: snyk config set org=joshua.woods --debug; snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
+        env:   
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
