--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -44,8 +44,8 @@ jobs:
         # In this case we want to upload the SAST issues to GitHub Code Scanning
         uses: snyk/actions/setup@master
 
-      - name: Snyk version
-        run: echo "${{ steps.snyk.outputs.version }}"
+      - name: Confirm token works
+        run: "curl --header 'Authorization: token $SNYK_TOKEN' --url 'https://api.snyk.io/rest/self?version=2024-10-15'"
         
       - name: Snyk ignore test
         run: snyk ignore --id="SNYK-NOT-REAL" --reason="Because I can" --expiry="2025-12-31" --debug
